# nlp_experimentation3

./: .gitignore  README.md  pyproject.toml  refresh_dependencies.sh  requirements.txt  setup.py  setup.sh
nlp_experimentation3/: main.py  scripts.py
nlp_experimentation3/basetask/: named_entity_recognition.py  text_completion.py
nlp_experimentation3/basetechnology/: openai.py  spacy.py
nlp_experimentation3/factory/: named_entity_recognition.py
nlp_experimentation3/tech_function/gensim/: topic_modeling.py
nlp_experimentation3/tech_function/huggingface/: named_entity_recognition.py
nlp_experimentation3/tech_function/openai/: named_entity_recognition.py  text_completion.py  text_completion_tools.py
nlp_experimentation3/tech_function/spacy/: named_entity_recognition.py
tests/test_base/: test_annotation.py  test_pos_tagging.py
tests/test_functionalities/: test_summarization.py  test_tokenization.py  test_translation.py
tests/test_technologies/test_claude_opus/: test_text_completion.py
tests/test_technologies/test_openai/: test_text_classification.py
