[tool.poetry]
name = "nlp-experimentation3"
version = "0.1.0"
description = "experimentation with NLP and LLMS"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
annotated-types = "0.7.0"
anyio = "4.4.0"
blis = "0.7.11"
catalogue = "2.0.10"
certifi = "2024.6.2"
charset-normalizer = "3.3.2"
click = "8.1.7"
cloudpathlib = "0.18.1"
confection = "0.1.5"
cymem = "2.0.8"
distro = "1.9.0"
filelock = "3.15.4"
fsspec = "2024.6.1"
h11 = "0.14.0"
httpcore = "1.0.5"
httpx = "0.27.0"
huggingface-hub = "0.24.2"
idna = "3.7"
jinja2 = "3.1.4"
joblib = "1.4.2"
langcodes = "3.4.0"
language-data = "1.2.0"
marisa-trie = "1.2.0"
markdown-it-py = "3.0.0"
markupsafe = "2.1.5"
mdurl = "0.1.2"
mpmath = "1.3.0"
murmurhash = "1.0.10"
networkx = "3.3"
nltk = "3.8.1"
numpy = "1.26.4"
openai = "1.35.4"
packaging = "24.1"
preshed = "3.0.9"
pydantic = "2.7.4"
pydantic-core = "2.18.4"
pygments = "2.18.0"
python-dotenv = "1.0.1"
pyyaml = "6.0.1"
regex = "2024.5.15"
requests = "2.32.3"
rich = "13.7.1"
safetensors = "0.4.3"
shellingham = "1.5.4"
smart-open = "7.0.4"
sniffio = "1.3.1"
spacy = "3.7.5"
spacy-legacy = "3.0.12"
spacy-loggers = "1.0.5"
srsly = "2.4.8"
sympy = "1.13.1"
thinc = "8.2.5"
tokenizers = "0.19.1"
torch = "2.4.0"
tqdm = "4.66.4"
transformers = "4.43.2"
typer = "0.12.3"
typing-extensions = "4.12.2"
urllib3 = "2.2.2"
wasabi = "1.1.3"
weasel = "0.4.1"
wrapt = "1.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
install_spacy_model = "nlp_experimentation3.scripts:install_spacy_model"